Prevent overflow of shows.

--- a/app/client/public/css/sass/_table--body.scss
+++ b/app/client/public/css/sass/_table--body.scss
@@ -91,6 +91,8 @@
 			position:relative;
 
 			margin:10px 0;
+
+			overflow:hidden;
 		}
 
 		.show {
